--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@next/font": "13.1.6",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "18.13.0",
